codepkg/objects/Account_Merge_Batch_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Account Merge Batch Setting</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_From__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Created From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_To__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Created To</label>
        <type>Date</type>
    </fields>
    <label>Account Merge Batch Setting</label>
</CustomObject>